# ImageProcessingPipeline

./: .gitignore  pyproject.toml  setup.py
Image_Process_Pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
image_process_pipeline/: __init__.py
image_process_pipeline/framework/: config.py  process_data.py  process_pipeline.py  process_step.py  serilisable_inputs.py  typed_data_interface.py  visualiser.py
image_process_pipeline/pipeline_framework/: process_pipeline.py  process_step.py  visualiser.py
image_process_pipeline/processes/: __init__.py  analyse_statistics.py  apply_mask.py  apply_morphologies.py  arithmetic_stack_operation.py  combine_offsets.py  cull_boundary.py  extract_dimensions.py  extract_frames.py  extract_objects.py  fourier_denoise.py  generate_edge_mask.py  geometry_filter_masks.py  invert.py  load_stack.py  median_filter.py  normalise.py  number_adder.py  remove_outliers.py  remove_zero_pixels.py  threshold_binarise.py
image_processing_pipeline/: __init__.py
image_processing_pipeline/framework/: data_manager.py  process_data.py  process_pipeline.py  process_step.py  serilisable_inputs.py  typed_data_interface.py  visualiser.py
image_processing_pipeline/processes/: __init__.py  analyse_statistics.py  apply_mask.py  apply_morphologies.py  arithmetic_stack_operation.py  combine_offsets.py  cull_boundary.py  extract_dimensions.py  extract_frames.py  extract_objects.py  extrapolate.py  fourier_denoise.py  generate_edge_mask.py  geometry_filter_masks.py  interpolate.py  invert.py  load_stack.py  median_filter.py  normalise.py  (+6 more)
